--- a/src/routes/qwikcity/loader/index.mdx
+++ b/src/routes/qwikcity/loader/index.mdx
@@ -6,13 +6,13 @@ contributors:
 
 # `loader$()`
 
-Loaders allow data to flow from the server to the Qwik Components. For this reason, Qwik Loaders should be always understood in the context of **loading data in the server that is later consumed by a Qwik Component**, if you want to create a RESTful endpoint, please check the [endpoints](/qwikcity/endpoints/index.mdx) guide instead.
+Les chargeurs permettent aux données de circuler du serveur vers les composants Qwik. Pour cette raison, les chargeurs Qwik doivent toujours être inclus dans le contexte du **chargement de données sur le serveur qui sont ensuite consommées par un composant Qwik**, si vous voulez créer un endpoint RESTful, veuillez consulter à la place le guide [endpoints](/qwikcity/endpoints/index.mdx).
 
-They behave like RPC server-side functions that can be invoked by Qwik Components during rendering.
+Ils se comportent comme des fonctions RPC côté serveur qui peuvent être appelées par les composants Qwik pendant le rendu.
 
-## Declaring a loader
+## Déclaration d'un chargeur
 
-Loaders can only be declared inside the `src/routes` folder, in a `layout.tsx` or `index.tsx` file, and they MUST be exported.
+Les chargeurs ne peuvent être déclarés que dans le dossier `src/routes`, dans un fichier `layout.tsx` ou `index.tsx`, et ils DOIVENT être exportés.
 
 ```tsx
 // src/routes/layout.tsx
@@ -28,11 +28,11 @@ export const getProductData = loader$(() => {
 });
 ```
 
-> Loaders are not endpoints, it's an internal communication channel between the server and the Qwik Components. Also, loaders must return a JSON serializable value.
+> Les loaders ne sont pas des endpoints, c'est un canal de communication interne entre le serveur et les composants Qwik. Aussi, les chargeurs doivent retourner une valeur JSON sérialisable.
 
-## Using a loader
+## Utilisation d'un chargeur
 
-Loaders can be used by any component in the application, as long as the loader is declared in a `layout.tsx` or `index.tsx` file that is part of the existing route.
+Les chargeurs peuvent être utilisés par n'importe quel composant de l'application, tant que le chargeur est déclaré dans un fichier `layout.tsx` ou `index.tsx` qui fait partie de la route existante.
 
 ```tsx
 // src/routes/index.tsx
@@ -46,23 +46,23 @@ export const useGetServerTime = loader$(() => {
 });
 
 export default component$(() => {
-  // Retrieve a reactive signal of the loader data
+  // Récupére un signal réactif des données du chargeur
   const signal = useGetServerTime(); // Signal<{time: number}>
   return (
     <div>
-      Server time: {signal.value.time}
+      Heure du serveur : {signal.value.time}
     </div>
   );
 });
 ```
 
-> The `useGetServerTime()` retrieves the loader data, but it does not execute the loader multiple times. Loaders execute eagerly\ at the beginning of the request in order to provide low latency. For this reason they are only allowed in the `src/routes` folder, in a `layout.tsx` or `index.tsx` file, and they MUST be exported.
+> La fonction `useGetServerTime()` récupère les données du chargeur, mais ne l'exécute pas plusieurs fois. Les chargeurs s'exécutent par avance au début de la requête afin d'offrir une faible latence. Pour cette raison, ils ne sont autorisés que dans le dossier `src/routes`, dans un fichier `layout.tsx` ou `index.tsx`, et ils DOIVENT être exportés.
 
-## Multiple loaders
+## Plusieurs chargeurs
 
-Multiple loaders are allowed across the whole application, and they can be used in any Qwik Component. **You can even declare multiple loaders in the same file**.
+Plusieurs chargeurs sont autorisés dans toute l'application, et ils peuvent être utilisés dans n'importe quel composant Qwik. **Vous pouvez même déclarer plusieurs chargeurs dans le même fichier**.
 
-**File: `src/routes/layout.tsx`**
+**Fichier : `src/routes/layout.tsx`**
 
 ```tsx
 import { component$ } from '@builder.io/qwik';
@@ -86,22 +86,22 @@ export default component$(() => {
 });
 ```
 
-**File: `src/components/footer.tsx`**
+**Fichier : `src/components/footer.tsx`**
 
 ```tsx
 import { component$ } from '@builder.io/qwik';
 
-// Import the loader from the layout
+// Importe le chargeur à partir du layout
 import { useGetServerTime } from '../routes/layout.tsx';
 
 export const Footer = component$(() => {
-  // Consume the loader data
+  // Consomme les données du chargeur
   const signal = useGetServerTime();
   return <footer>Server time: {signal.value.time}</footer>;
 });
 ```
 
-**File: `src/routes/admin/index.tsx`**
+**Fichier : `src/routes/admin/index.tsx`**
 
 ```tsx
 import { component$ } from '@builder.io/qwik';
@@ -126,20 +126,20 @@ export default component$(() => {
     <section>
       <h1>Admin</h1>
       {logged.value.logged ? (
-        <p>Welcome {user.value.user.name}</p>
+        <p>Bienvenue {user.value.user.name}</p>
       ) : (
-        <p>You are not logged in</p>
+        <p>Vous n'êtes pas connecté</p>
       )}
     </section>
   );
 });
 ```
 
-## Loader context
+## Contexte du chargeur
 
-Just like request handlers such as `onRequest` and `onGet`, loaders have access to the `RequestEvent` object which includes information about the current request.
+Tout comme les gestionnaires de requêtes tels que `onRequest` et `onGet`, les chargeurs ont accès à l'objet `RequestEvent` qui contient des informations sur la requête en cours.
 
-This information comes in handly when the loader needs to conditionally return data based on the request, or it needs to override the response status, headers or body manually.
+Ces informations sont très utiles lorsque le chargeur doit retourner des données de manière conditionnelle en fonction de la requête, ou lorsqu'il doit modifier manuellement le statut, les entêtes ou le corps de la réponse.
 
 ```tsx
 import { loader$ } from '@builder.io/qwik-city';
@@ -157,8 +157,8 @@ export const getServerTime = loader$((ev) => {
 });
 ```
 
-## When to use a loader?
+## Quand utiliser un chargeur ?
 
-A loader should be used when you need to provide some server-side data to your Qwik Components. For example, if you need to fetch some data from a database or an API, you can use a loader to do that.
+Un chargeur doit être utilisé lorsque vous avez besoin de fournir des données côté serveur à vos composants Qwik. Par exemple, si vous avez besoin de récupérer des données d'une base de données ou d'une API, vous pouvez utiliser un chargeur pour le faire.
 
-You should not use a loader to create a REST API, for that you’d be better off using an [Endpoint](/qwikcity/endpoints/index.mdx), which allows you to have tight control over the response headers and body.
+Vous ne devriez pas utiliser un chargeur pour créer une API REST, pour cela vous feriez mieux d'utiliser un [Endpoint](/qwikcity/endpoints/index.mdx), qui vous permet d'avoir un contrôle précis sur les entêtes et le corps de la réponse.
