--- a/src/routes/qwikcity/pages/index.mdx
+++ b/src/routes/qwikcity/pages/index.mdx
@@ -11,15 +11,15 @@ contributors:
 
 # Pages
 
-Both pages and endpoints in Qwik City are created by adding a new `index.tsx` file in the `src/routes` directory.
+Les pages et les endpoints dans Qwik City sont créés en ajoutant un nouveau fichier `index.tsx` dans le répertoire `src/routes`.
 
-The only difference is that a page exports a `default` Qwik component, which will be rendered as the content of the page, while an endpoint only exports a `onRequest`, `onGet`, `onPost`, `onPut`, `onDelete`, `onPatch`, `onHead` function, which will be used to handle the incoming request.
+La seule différence est qu'une page exporte un composant Qwik `default`, qui sera rendu comme le contenu de la page, alors qu'un endpoint exporte seulement une fonction `onRequest`, `onGet`, `onPost`, `onPut`, `onDelete`, `onPatch`, `onHead`, qui sera utilisée pour gérer la requête entrante.
 
-## Components
+## Composants
 
-Page content can be created using Qwik components. The component representing the content should be exported as a `default` export.
+Le contenu d'une page peut être créé en utilisant des composants Qwik. Le composant représentant le contenu doit être exporté comme un export `default`.
 
-Let's assume you have your routes set up like this:
+Supposons que vous ayez vos routes configurées comme ceci :
 
 ```
 src/
@@ -30,16 +30,16 @@ src/
 ```
 
 ```tsx
-// File: src/routes/some/path/index.tsx
+// Fichier : src/routes/some/path/index.tsx
 import { component$ } from '@builder.io/qwik';
 
-// Notice the default export
+// Remarquez l'exportation par défaut
 export default component$(() => {
   return <h1>Hello World!</h1>;
 });
 ```
 
-### Importing other components
+### Importation d'autres composants
 
 You can build complex views by composing multiple components within each other. To do that import other components into your `index.tsx` file.
 
@@ -54,11 +54,11 @@ src/
             └── sub_component.tsx
 ```
 
-Inside `index.tsx` you can create a component that is exported as `default` export. Content is created by writing a template with [JSX](https://reactjs.org/docs/introducing-jsx.html)-Syntax. Every component-function returns the template that should be rendered on the screen. If you want to learn more about the component anatomy, please see [components documentation](/docs/components/overview/index.mdx).
-The following component will be rendered at `https://example.com/some/path` according to the directory-structure, we have set up above.
+A l'intérieur de `index.tsx` vous pouvez créer un composant qui est exporté comme `default`. Le contenu est créé en écrivant un template avec la syntaxe [JSX](https://reactjs.org/docs/introducing-jsx.html). Chaque fonction de composant renvoie le template qui doit être rendu à l'écran. Pour en savoir plus sur l'anatomie des composants, veuillez consulter la [documentation des composants](/docs/components/overview/index.mdx).
+Le composant suivant sera rendu à cet endroit `https://example.com/some/path` selon la structure du répertoire, que nous avons mis en place ci-dessus.
 
 ```tsx
-// File: src/routes/some/path/index.tsx
+// Fichier : src/routes/some/path/index.tsx
 import { component$ } from '@builder.io/qwik';
 import Heading from '../../../components/heading';
 import SubComponent from './sub_component';
@@ -75,26 +75,26 @@ export default component$(() => {
 ```
 
 ```tsx
-// File: src/components/heading.tsx
+// Fichier : src/components/heading.tsx
 import { component$ } from '@builder.io/qwik';
 
 export default component$(() => {
-  return <h1>Site Heading</h1>;
+  return <h1>Entête du site</h1>;
 });
 ```
 
 ```tsx
-// File: src/routes/some/path/sub_component.tsx
+// Fichier : src/routes/some/path/sub_component.tsx
 import { component$ } from '@builder.io/qwik';
 
 export default component$(() => {
-  return <div>Other component content.</div>;
+  return <div>Le contenu d'un autre composant.</div>;
 });
 ```
 
-## `head` export
+## Export du `head`
 
-HTML places the `<head>` tag as the first element within `<html>` (at the very top of the HTML content). The `<head>` section is not something that your route component renders directly, yet you still need to control its content. This can be achieved by exporting a `head` property (or function) from your page component.
+Le langage HTML place la balise `<head>` comme premier élément dans `<html>` (tout en haut du contenu HTML). La section `<head>` n'est pas quelque chose que votre composant de route rend directement, mais vous devez quand même contrôler son contenu. Vous pouvez y parvenir en exportant une propriété (ou une fonction) `head` depuis votre composant de page.
 
 ```tsx
 // src/routes/index.tsx
@@ -116,11 +116,11 @@ export const head = {
 };
 ```
 
-> Every endpoint (index) and layout can export a `head` property (or function) that returns a `DocumentHead` object. The `DocumentHead` object is used to resolve the title of the page, as well as the meta, links and styles.
+> Chaque endpoint (index) et mise en page peut exporter une propriété (ou fonction) `head` qui renvoie un objet `DocumentHead`. L'objet `DocumentHead` est utilisé pour résoudre le titre de la page, ainsi que les méta, les liens et les styles.
 
-### Dynamic head
+### Head dynamique
 
-In the example above, the `head` is static. However, you can also export a function that returns a `DocumentHead` object. This allows you to dynamically set the title of the page based on the data that is retrieved from `loaders` or request handlers that executed before the page component is rendered.
+Dans l'exemple ci-dessus, le `head` est statique. Cependant, vous pouvez également exporter une fonction qui renvoie un objet `DocumentHead`. Cela vous permet de définir dynamiquement le titre de la page en fonction des données récupérées par les `loaders` ou les gestionnaires de requêtes exécutés avant le rendu du composant de la page.
 
 ```tsx
 // src/routes/product/[productId]/index.tsx
@@ -146,7 +146,7 @@ export default component$(() => {
 export const head: DocumentHead = ({ params, resolveValue }) => {
   const product = resolveValue(useGetProductData);
   return {
-    title: `Product "${product.title}"`,
+    title: `Produit "${product.title}"`,
     meta: [
       {
         name: 'description',
@@ -161,9 +161,9 @@ export const head: DocumentHead = ({ params, resolveValue }) => {
 };
 ```
 
-### Nested layouts and head
+### Mises en page imbriquées et head
 
-An advanced case is that a [layout](/qwikcity/layout/index.mdx) may want to modify the document title of an already resolved document head. In the example below, the page component returns the title of `Foo`. Next, the containing layout component can read the value of the page's document head and modify it. In this example, the layout component is adding `MyCompany - ` to the title, so that when rendered, the title will be `MyCompany - Foo`. Every layout in the stack has the opportunity to return a new value.
+Un cas avancé est qu'une [mise en page](/qwikcity/layout/index.mdx) peut vouloir modifier le titre du document d'une entête de document déjà résolue. Dans l'exemple ci-dessous, le composant page renvoie le titre `Foo`. Ensuite, le composant de mise en page qui le contient peut lire la valeur de l'entête du document de la page et la modifier. Dans cet exemple, le composant de mise en page ajoute `MyCompany - ` au titre, de sorte qu'au moment du rendu, le titre sera `MyCompany - Foo`. Chaque mise en page de la pile a la possibilité de renvoyer une nouvelle valeur.
 
 ```
 ──src/
@@ -173,14 +173,14 @@ An advanced case is that a [layout](/qwikcity/layout/index.mdx) may want to modi
 ```
 
 ```tsx
-// File: src/routes/index.tsx
+// Fichier : src/routes/index.tsx
 export const head: DocumentHead = {
   title: `Foo`,
 };
 ```
 
 ```tsx
-// File: src/routes/layout.tsx
+// Fichier : src/routes/layout.tsx
 export const head: DocumentHead<EndpointData> = ({ head }) => {
   return {
     title: `MyCompany - ${head.title}`,
